--- a/oas-env/oas/templates/login.html
+++ b/oas-env/oas/templates/login.html
@@ -1,7 +1,6 @@
 {% load static %}
 {% include 'header.html' %}
 <!DOCTYPE html>
-<html>
 
 <head>
    <title>Sign-up</title>
@@ -20,12 +19,6 @@
                     <input type="text" class="form-control" id="username" name="username">
                   </div>
                <div class="row mb-3">
-                 <label for="email" class="col-sm-12 col-form-label">Email</label>
-                 <div class="col-sm-10">
-                   <input type="email" class="form-control" id="email" name="email">
-                 </div>
-               </div>
-               <div class="row mb-3">
                  <label for="password" class="col-sm-12 col-form-label">Password</label>
                  <div class="col-sm-10">
                    <input type="password" class="form-control" id="password" name="password">
@@ -33,20 +26,17 @@
                </div>
                <div class="row mb-3">
                   <div class="col-sm-10">
-                     <button type="submit" class="btn btn-primary">Create an Account</button>
+                     <button type="submit" class="btn btn-primary">Login</button>
                    </div>
                 </div>
-
                 <div class="row mb-3">
-                  <div class="col-sm-10">
-                     <span>Already have a Account</span>
-                     <a class="nav-link" href="{% url 'login' %}">Login</a>
-                   </div>
-                </div>
+                    <div class="col-sm-10">
+                       <span>Don't have a Account</span>
+                       <a class="nav-link" href="{% url 'register' %}">Sign-up</a>
+                     </div>
+                  </div>
                
                
              </form>
 
 
-
-</html>
