--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -59,9 +59,10 @@
 
 
 
-  <div class="bid-cards">
+  
 
   
+  <div class="bid-cards"> 
     <div class="row">
     {% for product in products %}
     {% if product.category == '1st-Auction' %}
@@ -79,17 +80,20 @@
     {% endfor %}
 </div><!-- /.row -->
 
-</div><!-- /.bbid-cards -->
+</div><!-- /.bid-cards -->
+
 <nav aria-label="Page navigation example">
   <ul class="pagination">
     {% if products.has_previous %}
-       <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+       <li class="page-item"><a class="page-link" href="/?page={products.previous_page_number}">Previous</a></li>
     {% endif %}
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
+
+    {% for p in totalPages %}
+       <li class="page-item"><a class="page-link" href="/?page={{p}}">{{p}}</a></li>
+    {% endfor %}
+      
     {% if products.has_previous %}
-       <li class="page-item"><a class="page-link" href="#">Next</a></li>
+       <li class="page-item"><a class="page-link" href="/?page={products.next_page_number}">Next</a></li>
     {% endif %}
   </ul>
 </nav>
