--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>Onlineauctions</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.carousel.min.css' %}">
     <link rel = "stylesheet" type="text/css" href = "{% static 'CSS/owl.theme.default.min.css' %}"> 
@@ -17,13 +17,11 @@
          <div class="top-bar-inner">
             <div class="top-bar-inner-icons">
                 <span><h6>Follow US</h6></span>
-
                 <ul>
                     <li><a href="#"><i style = "color:green;" class="bi bi-facebook"></i></a></li>
                     <li><a href="#"></a><i style = "color:green;" class="bi bi-twitter"></i></a></li>
                     <li><a href="#"></a><i style = "color:green;" class="bi bi-linkedin"></i></a></li>
                     <li><a href="#"></a><i style = "color:green;" class="bi bi-instagram"></i></a></li>
-
                 </ul>
             </div><!-- /.top-bar-inner-icons -->
             <div class="strip">
