--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -124,10 +124,11 @@ body{
   text-align: center;
   color: white;
   padding: 20px;
-  height: 80%;
 }
 .bid-cards .card{
   transition: all 0.3s;
+  height: 80%;
+  margin-top: 20px;
   
 
 }
