--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -165,6 +165,7 @@
     <!-- /.2-cards -->
 
     <div class="upcoming-auction">
+      <div class="container">
       <div class="slider owl-carousel">
         {% for product in products %} 
         {% if product.category == 'upcoming-auction' %}
@@ -184,13 +185,15 @@
         {% endif %} 
         {% endfor %}
         </div>
-
-    
-     
-        
-    
-   
+      </div><!-- /.container -->
     </div><!-- /.upcoming-auction -->
+  
+  
+  
+  
+  
+  
+  
   </main>
 
   <script
