--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -257,76 +257,32 @@ body{
 
 
 
+.upcoming-auction{
+  background-color: #000000;
+  color: white;
 
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
 
-.slider{
-  max-width: 1100px;
+.upcoming-auction .container{
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+.upcoming-auction .row{
   display: flex;
-}
-.slider .card{
-  flex: 7;
-  margin: 0 10px;
-  background: #fff;
-}
-.slider .card .img{
-  height: 200px;
-  width: 100%;
-}
-.slider .card .img img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  image-resolution: fit-content;
-}
-.upcomingt-auction .slider .card .content{
-  padding: 10px 20px;
-}
-.upcomingt-auction .card .content .title{
-  font-size: 25px;
-  font-weight: 600;
-}
-.upcomingt-auction .card .content .sub-title{
-  font-size: 20px;
-  font-weight: 600;
-  color: #e74c3c;
-  line-height: 20px;
-}
-.upcomingt-auction .card .content p{
-  text-align: justify;
-  margin: 10px 0;
-}
-.upcomingt-auction .card .content .btn{
-  display: block;
-  text-align: left;
-  margin: 10px 0;
-}
-.upcomingt-auction .card .content .btn button{
-  background: #e74c3c;
-  color: #fff;
-  border: none;
-  outline: none;
-  font-size: 17px;
-  padding: 5px 8px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.upcomingt-auction .card .content .btn button:hover{
-  transform: scale(0.9);
+  width: calc(250px * 18);
+  animation: scroll 20s linear infinite;
 }
 
-
-
-
-
+@keyframes scroll {
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(calc(-250px * 9));
+  }
+  
+}
 
 
 
