--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -166,25 +166,22 @@
 
     <div class="upcoming-auction">
       <div class="container">
-      <div class="slider owl-carousel">
-        {% for product in products %} 
-        {% if product.category == 'upcoming-auction' %}
-         <div class="card">
-           <div class="img">
-            <img src="media/{{product.image}}" alt="" />
-          </div>
-          <div class="content">
-            <div class="title">{{product.title}}</div>
-            <div class="sub-title">{{product.description}}</div>
-            <p>drum music online education</p>
-            <div class="btn">
-              <button>open drum stats</button>
+        <div class="row">
+          {% for product in products %} 
+          {% if product.category == '1st-Auction' %}
+          <div class="col-md-4">
+            <div class="card">
+              <img src="media/{{product.image}}" class="card-img-top"alt="..."/>
+              <div class="card-body">
+                <h5 class="card-title">{{product.title}}</h5>
+                <p class="card-text"><b>{{product.description}}</b></p>
+                <a href="#" class="btn btn-success">View Details</a>
+                <i class="bi bi-share-fill justify-content-end"></i>
+              </div>
             </div>
           </div>
-        </div>
-        {% endif %} 
-        {% endfor %}
-        </div>
+          {% endif %} 
+          {% endfor %}
       </div><!-- /.container -->
     </div><!-- /.upcoming-auction -->
   
