--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -168,7 +168,7 @@
       <div class="container">
         <div class="row">
           {% for product in products %} 
-          {% if product.category == '1st-Auction' %}
+          {% if product.category == 'upcoming-auction' %}
           <div class="col-md-4">
             <div class="card">
               <img src="media/{{product.image}}" class="card-img-top"alt="..."/>
