--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -272,7 +272,7 @@ body{
   display: flex;
   width: calc(250px * 18);
   animation: scroll 20s linear infinite;
-}
+
 
 @keyframes scroll {
   0%{
@@ -283,7 +283,8 @@ body{
   }
   
 }
-.upcoming-auction .img{
+}
+.upcoming-auction .row .img{
   height: 250px;
   width: 250px;
   display: flex;
