--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -265,6 +265,8 @@ body{
 
 .upcoming-auction .card{
   background-color: #000000;
+  height: 300px;
+  width: 300px;
 
 }
 
@@ -276,7 +278,6 @@ body{
     transform: translateX(calc(-250px * 9));
   }
   
-
 }
 
 
