adding animated cards

--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -185,10 +185,60 @@
       </div><!-- /.container -->
     </div><!-- /.upcoming-auction -->
   
+
+
+
+
+
+<div class="bottom-cards">
+  <div class="container">
+
+  
+  
+
+    <a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+      <div class="card">
+        <div class="wrapper">
+          <img src="{% static 'img/art2.jpg' %}" class="cover-image" />
+        </div>
+        <img src="" class="title" />
+        <img src="{% static 'img/art2.jpg' %}" class="character" />
+      </div>
+    </a>
+    
+    <a href="{% static 'img/art2.jpg' %}" alt="Mythrill" target="_blank">
+      <div class="card">
+        <div class="wrapper">
+          <img src="{% static 'img/bid-now-logo.jpg' %}" class="cover-image" />
+        </div>
+        <img src="" class="title" />
+        <img src="{% static 'img/bid-now-logo.jpg' %}" class="character" />
+      </div>
+    </a>
+
+
+    <a href="{% static 'img/art1.jpg' %}" alt="Mythrill" target="_blank">
+      <div class="card">
+        <div class="wrapper">
+          <img src="{% static 'img/art1.jpg' %}" class="cover-image" />
+        </div>
+        <img src="" class="title" />
+        <img src="{% static 'img/art1.jpg' %}" class="character" />
+      </div>
+    </a>
+  </div><!-- /.container -->
+  </div><!-- /.bottom-cards -->
   
   
   
   
+
+  <div class="counter-box">
+    <h2 class="counter">{{counter_app.number_of_feature}}</h2>
+    <span class="counterapp-span">{{counter_app.sign_of_feature}}</span>
+  </div>
+  <h4>{{counter_app.feature}}</h4>
+</div>
   
   
   </main>
