--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -177,22 +177,22 @@
   
   
 
-    <a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+    <a href="{% static 'img/art2.jpg' %}" alt="Mythrill" target="_blank">
       <div class="card">
         <div class="wrapper">
           <img src="{% static 'img/art2.jpg' %}" class="cover-image" />
         </div>
-        <img src="" class="title" />
+        <img src="{% static 'img/art2.jpg' %}" class="title" />
         <img src="{% static 'img/art2.jpg' %}" class="character" />
       </div>
     </a>
     
-    <a href="{% static 'img/art2.jpg' %}" alt="Mythrill" target="_blank">
+    <a href="{% static 'img/bid-now-logo.jpg' %}" alt="Mythrill" target="_blank">
       <div class="card">
         <div class="wrapper">
           <img src="{% static 'img/bid-now-logo.jpg' %}" class="cover-image" />
         </div>
-        <img src="" class="title" />
+        <img src="{% static 'img/bid-now-logo.jpg' %}" class="title" />
         <img src="{% static 'img/bid-now-logo.jpg' %}" class="character" />
       </div>
     </a>
@@ -203,7 +203,7 @@
         <div class="wrapper">
           <img src="{% static 'img/art1.jpg' %}" class="cover-image" />
         </div>
-        <img src="" class="title" />
+        <img src="{% static 'img/art1.jpg' %}" class="title" />
         <img src="{% static 'img/art1.jpg' %}" class="character" />
       </div>
     </a>
