--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -215,8 +215,8 @@
   
 
   <div class="counter-box">
-    <h2 class="counter"> BidNow</h2>
-    <span class="counterapp-span">Lorem, ipsum dolor.</span>
+    <h2 class="counter"> 123</h2>
+    <span class="counterapp-span">+</span>
   </div>
   <h4>Lorem, ipsum.</h4>
 </div>
