--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -216,7 +216,7 @@
 
   <div class="counter-box">
     <h2 class="counter"> 123</h2>
-    <span class="counterapp-span">+</span>
+    <span class="counterapp-span">Lorem, ipsum dolor.</span>
   </div>
   <h4>Lorem, ipsum.</h4>
 </div>
