--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -212,7 +212,6 @@
   
   
   
-  
 
   <div class="counter-box">
     <h2 class="counter"> 123</h2>
@@ -220,6 +219,88 @@
   </div>
   <h4>Lorem, ipsum.</h4>
 </div>
+
+
+<div class="third-strip">
+  <div class="container">
+   <div class="third-strip-inner">
+    <h1>Why<span>Choose</span>Us</h1>
+    <img src="assets/images/dna.png" alt="">
+    <p>Explore Our Completed Services! Consectetur adipiscing elitt elit tellus, luctus pulvinar dapibus leoconsectetur luctus nec.</p>
+   </div> <!-- /.third-strip-inner -->
+
+
+
+   <div class="third-strip-inner-content">  
+    <div class="container"> <div class="row">
+     
+        </div><div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+   
+
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <img src="media/{{product.image}}" alt="">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+   
+  
+  
+    
+   
+     
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+
+ 
+
+    
+   
+      
+     
+ 
+
+
+      </div><!-- /.row -->  
+
+    </div><!-- /.col-md-3 -->
+
+</div><!-- /.container -->
+   </div><!-- /.third-strip-inner-content -->
+</div><!-- /.container -->
+ </div><!-- /.third-strip -->
+
+
+
+
+
+
   
   
   </main>
