--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -232,15 +232,10 @@
 
 
    <div class="third-strip-inner-content">  
-    <div class="container"> <div class="row">
-     
-        </div><div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          </div>
-        </div>
-   
+    <div class="container"> 
+      <div class="row">
+        {% for product in products %} 
+        {% if product.category == 'whys-choose-us' %}
 
         <div class="card" style="width: 18rem;">
           <div class="card-body">
@@ -252,45 +247,15 @@
             <a href="#" class="card-link">Another link</a>
           </div>
         </div>
-   
-  
-  
-    
-   
-     
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
 
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-
- 
-
-    
-   
       
      
  
 
-
+        {% endif %} 
+        {% endfor %}
       </div><!-- /.row -->  
-
-    </div><!-- /.col-md-3 -->
-
+      
 </div><!-- /.container -->
    </div><!-- /.third-strip-inner-content -->
 </div><!-- /.container -->
