--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -234,17 +234,20 @@
    <div class="third-strip-inner-content">  
     <div class="container"> 
       <div class="row">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
         {% for product in products %} 
         {% if product.category == 'whys-choose-us' %}
 
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <img src="media/{{product.image}}" alt="">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
           </div>
-        </div>
+          
         {% endif %} 
         {% endfor %}
       </div><!-- /.row -->  
