--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -238,12 +238,11 @@
           <div class="col">
         {% for product in products %} 
         {% if product.category == 'whys-choose-us' %}
-
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+         <div class="card">
+              <img src="media/{{product.image}}" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">{{product.title}}</h5>
+                <p class="card-text">{{product.description}}</p>
               </div>
             </div>
           </div>
