--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -231,7 +231,7 @@
           {% if product.category == 'why-choose-us' %}
           <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="media/{{product.image}}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{product.title}}</h5>
           <p class="card-text">{{product.description}}</p>
